# Sixxer

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  railway.toml
config/: gig_templates.yaml  prompts.yaml  selectors.yaml  settings.py
scripts/: check_status.py  health_check.py  manual_login.py  setup_gigs.py
src/ai/: __init__.py  analyzer.py  client.py  communicator.py  prompts.py
src/browser/: anti_detect.py  engine.py  selectors.py  session.py
src/fiverr/: __init__.py  dashboard.py  gig_manager.py  inbox.py  navigation.py  order_actions.py  order_monitor.py
src/models/: database.py  schemas.py
src/orchestrator/: dispatcher.py  scheduler.py  state_machine.py
src/utils/: file_handler.py  human_timing.py  logger.py  retry.py
src/workers/: __init__.py  base.py  coding_worker.py  data_entry_worker.py  revision_worker.py  writing_worker.py
tests/: conftest.py  test_dispatcher.py  test_file_handler.py  test_human_timing.py  test_retry.py  test_schemas.py  test_state_machine.py
